<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">סיור בהר הבית</string>
    <string name="hello_world"></string>
    <string name="action_settings">הגדרות</string>
    <string name="header_main_menu">עולים להר</string>
    <string name="tag_button_live_tour">live</string>
    <string name="tag_button_offline_tour">offline</string>
    <string name="button_offline_tour">סיור וירטואלי</string>
    <string name="button_live_tour">סיור בהר</string>
    <string name="title_activity_prep_verify">בדיקת מוכנות</string>
    <string name="title_activity_tour_main_menu">סיור</string>
    <string name="verification_dunk">טבלתי כדין במקווה כשר</string>
    <string name="verification_other_preps">עשיתי כל ההכנות הדרושות</string>
    <string name="verification_no_shoes_etc">לא אכנס להר במנעלי עור</string>
    <string name="btn_start_tour">מוכנים לעלות</string>
    <string name="message_unprepared">יש לבצע את כל ההכנות לפני העלייה להר</string>
    <string name="title_activity_map">מפת הסיור</string>
    <string name="legal_info">מידע משפטי</string>
    <string name="legal_notices_confirmation">אישור</string>
    <string name="title_activity_station">תחנת עניין</string>
    <string name="empty_list_message">לא קיימות הדרכות לתחנה זו כעת</string>
    <string name="title_activity_station_menu"></string>
    <string name="title_station_menu">הדרכות זמינות</string>
    <string name="tour_header">בהדרכת:</string>
    <string name="message_gms_connect_fail">לצערי, החיבור לשירות מפות גוגל לא הצליח. נא לוודא שיש למכשיר חיבור פעיל לאינטרנט, ושירותי Google Play מחוברים</string>
    <string name="header_preparation_verification">האם עשיתם את כל ההכנות?</string>
    <string name="link_prep_instructions"><u>עזרה עם הכנות לעלייה</u></string>
    <string name="title_activity_tour_swipe">הדרכות</string>
    <string name="map_menu_satellite">מפת לווין</string>
    <string name="map_menu_normal">מפה רגילה</string>
    <string name="message_location_services_failure">לא הצליח להתחבר למיקום המכשיר. יש לאפשר מעקב של מיקום במכשיר, או לעשות סיור וירטואלי.</string>
    <string name="message_error">שגיאה</string>
    <string name="message_google_play_failure">לא הצליח להתחבר ל-Google Maps. יש לבדוק אם שירותי Google Play מאופשרים.</string>
    <string name="video_link">לחץ לצפייה בסרטון</string>
	<string name="no_video_error">לא הותקנה במכשיר אפליקציה לצפייה בסרטונים</string>
	<string name="error">Error: </string>
</resources>
